Fix Markdown image overflow

--- a/static/styles/view_md.css
+++ b/static/styles/view_md.css
@@ -113,3 +113,10 @@ table tr:last-child td:first-child {
 table tr:last-child td:last-child {
 	border-bottom-right-radius: 8px;
 }
+
+img {
+    max-width: 100%;
+    height: auto;
+    display: block; 
+    margin: 0 auto; 
+}
